fixed experience boxes clipping

--- a/functions/public/stylesheets/experience.css
+++ b/functions/public/stylesheets/experience.css
@@ -31,6 +31,7 @@
     justify-content: space-around;
     max-height: 50vh;
     overflow-y: auto;
+    min-width: 200px;
 }
 
 article {
